--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -6,6 +6,11 @@ body,
 html {
   height: 100%;
   background: black;
+  overflow: hidden;
+}
+
+.site-header {
+  z-index: 999;
 }
 
 .hero {
@@ -25,11 +30,54 @@ html {
   border-top: 1px solid hsl(0, 0%, 59%);
 }
 
+.nav-dots.active {
+  background: white;
+}
+
 @media screen and (min-width: 1024px) {
   .page-container {
     width: 100%;
     max-width: 1250px;
     margin: 0 auto;
+  }
+
+  .crew-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .crew-info {
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    display: flex;
+    flex: 1;
+    margin-top: -4rem;
+  }
+
+  .crew-text {
+    padding-top: 5rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .crew-text > p {
+    max-width: 26rem;
+  }
+
+  .crew-image {
+    flex: 1;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .crew-image img {
+    position: absolute;
+    bottom: 0;
   }
 
   .page-header {
@@ -87,7 +135,7 @@ html {
     left: -5rem;
     height: 100%;
     width: 5rem;
-    backdrop-filter: blur;
+    backdrop-filter: blur(16px);
   }
 
   .navigation::after {
